k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi-deployment
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fastapi-app-lb
  template:
    metadata:
      labels:
        app: fastapi-app-lb
    spec:
      containers:
      - name: fastapi-container
        image: yjunho/fastapi:48464bebd92f9927738a8011ba0d2d3aadb39e76
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: fastapi-svc
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: fastapi-app-lb
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx-web-lb
  template:
    metadata:
      labels:
        app: nginx-web-lb
    spec:
      containers:
      - name: nginx-container
        image: yjunho/nginx:48464bebd92f9927738a8011ba0d2d3aadb39e76
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: nginx-web-lb
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alb-base-ingress
  annotations:  # 보안 그룹 등 AWS에 대한 설정
    # 보안그룹 설정 (external-alb-sg)
    # alb.ingress.kubernetes.io/security-groups: sg-061a7726babddf1fc
    # internet-facing: 외부 로드밸런서(IP 부여), internet: 내부
    alb.ingress.kubernetes.io/scheme: internet-facing
    # ip(Pod의 IP로 트래픽 전달)
    # instance: EC2 인스턴스를 대상으로 하는 타켓 그룹 생성
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    # HTTPS 인증서 정의 (인증서 ARN)
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-southeast-2:925047940866:certificate/9570418b-4a9d-4268-8c66-fdd6b0e5c3da
    # HTTP 접속 시 HTTPS로 리다이렉션(선택사항, 권장)
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    # 경로 재설정
    # alb.ingress.kubernetes.io/transforms.nginx-svc: >
    #   [
    #     {
    #       "type": "url-rewrite",
    #       "urlRewriteConfig": {
    #         "rewrites": [
    #           {
    #             "regex": "^\\/nginx(?:\\/(.*))?$",
    #             "replace": "/$1"
    #           }
    #         ]
    #       }
    #     }
    #   ]
spec: # 로드밸런서의 리스너에 대한 설정
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: fastapi-svc
                port:
                  number: 8000
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-svc
                port:
                  number: 80
